dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_3444416998.log
== RUN (2025-08-22 14:52:49)
-- CODE: 
expressao =(3**2)-30+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:53:27)
-- CODE: 
expressao =((3**2)-30)+8//(3**2)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
-21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:38:09)
-- CODE: 
expressao = (30-3**2+8)//3**2*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:53:11)
-- CODE: 
expressao =((3**2)-30)+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:53:10)
-- CODE: 
expressao =((3**2)-30)+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:54:28)
-- CODE: 
expressao =((-3**2)+30)+8//(3**2)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:48)
-- CODE: 
expressao =(3**2)-30+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:50:23)
-- CODE: 
  expressao = ((3**2)-30+8)//(3**2*(10))
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*(10))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*(10))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:47:08)
-- CODE: 
expressao = ((30-(3**2))+8)//(3**2)*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((30-(3**2))+8)//(3**2)*10)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((30-(3**2))+8)//(3**2)*10)
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:50:58)
-- CODE: 
expressao = ((3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:41)
-- CODE: 
expressao =(3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:42:00)
-- CODE: 
expressao = (30-3**2+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:53:50)
-- CODE: 
expressao =((3**2)-30+8//(3**2)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30+8//(3**2)*10
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30+8//(3**2)*10
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:50:44)
-- CODE: 
  expressao = ((3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:44:17)
-- CODE: 
expressao = (30-3**2+8)//(3**2*(10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2*(10)
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2*(10)
                             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:38:07)
-- CODE: 
expressao = (30-3**2+8)//3**2*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
30
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:25)
-- CODE: 
expressao = ((3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:40)
-- CODE: 
expressao =(3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:47:16)
-- CODE: 
expressao = ((30-(3**2))+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:44:02)
-- CODE: 
expressao = (30-3**2+8)//(3**2(*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2(*10)
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2(*10)
                             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:37:57)
-- CODE: 
expressao = (30-3**2=8)//3**2*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2=8)//3**2*10
                 ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2=8)//3**2*10
                 ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:53:12)
-- CODE: 
expressao =((3**2)-30)+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =((3**2)-30)+8//(3**2*)*10
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:46:59)
-- CODE: 
expressao = ((30-(3**2))+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:46:40)
-- CODE: 
expressao = (30-(3**2)+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:50)
-- CODE: 
expressao =(3**2)-30+8//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8//(3**2*)*10
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:50:46)
-- CODE: 
  expressao = ((3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:44:33)
-- CODE: 
expressao = (30-3**2+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:52:41)
-- CODE: 
expressao =(3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao =(3**2)-30+8)//(3**2*)*10
                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:50:56)
-- CODE: 
expressao = ((3**2)-30+8)//(3**2*)*10
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = ((3**2)-30+8)//(3**2*)*10
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:46:43)
-- CODE: 
expressao = (30-(3**2)+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 14:54:33)
-- CODE: 
expressao =((-3**2)+30)+8//(3**2)*10
print(expressao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:44:17)
-- CODE: 
expressao = (30-3**2+8)//(3**2*(10)
print(expressao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2*(10)
                             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = (30-3**2+8)//(3**2*(10)
                             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
